# SSL-Methods

./: .gitignore  pyproject.toml
notebooks/: dataset_experiments.ipynb  kmeans_experiments.ipynb
src/dataset_downloader/: dataset_utils.py  download_mnist.py
src/kmeans/: main.py
src/simple_supervised_nn/: main.py
src/torch_utils/: custom_dataset.py  models.py
